# solenoid

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
etc/: 23027350.txt  23624962.txt  23634227.txt  23635557.txt  23635581.txt  23640313.txt  23641709.txt  23642294.txt  23647631.txt  23647653.txt  23678007.txt  23678686.txt  23678721.txt  23683035.txt  23683764.txt  23690323.txt  23728669-23728678.txt  23728669.txt  23728673.txt  23728675.txt  23728677.txt  23728678_10.txt  23820665-23820674.txt  23820665.txt  23820666.txt  23820667.txt  23820669.txt  23820671.txt  23820672.txt  23820674.txt  23828643.txt  23882423.txt  23882424.txt  23882425.txt  23882430.txt  23882432_3.txt  23884137.txt  23884139.txt  23884142.txt  23884144.txt  (+41 more)
etc/b/: 23027350.json  23642294.json  23728671.json  23785123.json  23820674.json
etc/call/: Call.bin-runtime  Call.sol  Cell.bin-runtime
etc/counter/: Counter.bin-runtime  Counter.sol
etc/fail/: Fail.bin-runtime  Fail.sol
etc/reentrancy/: Attacker.bin-runtime  Vulnerable.bin-runtime  setup.sol
etc/sync/: 23027350.txt  23624962.txt  23634227.txt  23635557.txt  23635581.txt  23640313.txt  23641709.txt  23642294.txt  23647631.txt  23647653.txt  23678007.txt  23678686.txt  23678721.txt  23683035.txt  23683764.txt  23690323.txt  23728669.txt  23728670.txt  23728671.txt  23728672.txt  23728673.txt  23728674.txt  23728675.txt  23728676.txt  23728677.txt  23728678.txt  23820665.txt  23820666.txt  23820667.txt  23820668.txt  23820669.txt  23820670.txt  23820671.txt  23820672.txt  23820673.txt  23820674.txt  23828643.txt  23882423.txt  23882424.txt  23882425.txt  (+83 more)
evm-common/: Cargo.toml
evm-common/src/: address.rs  block.rs  call.rs  error.rs  hash.rs  lib.rs  word.rs
evm-event/: Cargo.toml
evm-event/src/: lib.rs
evm-tracer/: Cargo.toml
evm-tracer/src/: aux.rs  lib.rs  run.rs
examples/: block.rs  check.rs  ecrecover.rs  execute.rs  failures.rs  latest.rs  quoter-check.rs  quoter-revm.rs  quoter-sole.rs  quoter.rs  reentrancy.rs  revm.rs  runner.rs  sole.rs  solenoid.rs  trace.rs
rpc-proxy/: .env.example  .gitignore  Cargo.toml  run.sh  tests-cache.tgz
rpc-proxy/src/: cache.rs  main.rs  retry.rs
solenoid-t8n/: .gitignore  Cargo.toml  README.md
solenoid-t8n/src/: main.rs
src/: allocator.rs  decoder.rs  eth.rs  executor.rs  ext.rs  interpreter.rs  lib.rs  opcodes.rs  precompiles.rs  solenoid.rs  tracer.rs
src/common/: account.rs  address.rs  block.rs  call.rs  hash.rs  mod.rs  word.rs
src/eof/: decoder.rs  executor.rs  mod.rs
tests/: caller.rs  counter.rs  tx.rs
wasm-demo/: .gitignore  Cargo.toml  README.md  index.html  run.sh
wasm-demo/src/: lib.rs
