[package]
name = "solenoid"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4"
i256 = "0.2.2"
once_cell = "1.19"
primitive-types = "0.13.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

evm-tracer = { path = "./evm-tracer" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
## Only sync,macros,io-util,rt,time features are supported
tokio = { version = "1.46.1", features = ["macros", "rt"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["testkit"]
testkit = []
account = []
tracing = []

[dev-dependencies]
pretty_assertions = "1.4.1"
