[package]
name = "solenoid"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
eyre = { version = "0.6.12", default-features = false, features = ["auto-install"]  }
futures = "0.3.31"
hex = "0.4"
i256 = "0.2.2"
once_cell = "1.19"
primitive-types = "0.13.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
ripemd = "0.1.3"
blake2 = "0.10.6"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-bn254 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
evm-tracer = { path = "./evm-tracer" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
## "Only features sync,macros,io-util,rt,time are supported on wasm."
tokio = { version = "1.46.1", features = ["macros", "rt"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["testkit", "tracing", "tracing-subscriber"]
testkit = []

[dev-dependencies]
crossterm = "0.29.0"
pretty_assertions = "1.4.1"
